🐞 fix(ui): Fix `WidgetSelect` can not scroll when there is too much options

--- a/packages/abm-ui/src/styles/includes/widgets/select.styl
+++ b/packages/abm-ui/src/styles/includes/widgets/select.styl
@@ -3,7 +3,7 @@
 	top var(--w-select-top-begin)
 	left var(--w-select-left)
 	z-index 60
-	overflow hidden
+	overflow hidden auto
 	width var(--w-select-width)
 	height 32px
 	border 1px solid var(--w-select-border)
@@ -16,7 +16,6 @@
 	top var(--w-select-item-diff)
 	display flex
 	flex-direction column
-	overflow hidden auto
 	&::part(w-list-item)
 		position static
 		padding 4px 8px
